--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -8,6 +8,7 @@
 }
 
 .projects {
+    display: grid;
     justify-self: center;
     align-self: end;
     position: relative;
